WarehouseEcommerce/Content/Theme/University/app/css/Site.css
/* ... */
@media(max-width:364px) {
    .feature-product-overflow .imagewrap img,
    .feature-product-overflow .imagewrap a,
    .feature-product-overflow .imagewrap .prd_img {
        height: 220px !important;
        width: 220px !important;
    }

    .feature-product-overflow .nb_fp_boxwrap {
        width: 220px !important;
    }

    .feature-product-overflow .owl-item {
        width: 230px !important;
    }
    .feature-product-overflow .foot i {
        margin-top: -5px;
    }
}
.feature-product-overflow .owl-item .imagewrap a {
    border: 1px solid white;
}
.feature-product-overflow .owl-item:hover .imagewrap a {
    border: 1px solid var(--secondary-color);
}
.feature-product-overflow .owl-item:hover .nb_fp_boxwrap a {
    background-color: var(--secondary-color) !important;
}
/*feacture product img -end*/
@media (max-width: 480px) {
    .nb_top_catSection .accordion ul li {
        width: 120px !important;
        height: 120px !important
    }
    .nb_top_catSection .accordion ul li div a {
        height: 120px;
    }
}

.list-on-tablets .imagewrap {
    display: inline-block;
    overflow:hidden;
}
.list-on-tablets .imagewrap img {
  display: block;
  transition: transform .4s;
}
.list-on-tablets .prd_lst_boxouter:hover  img {
  transform: scale(1.1);
  transform-origin: 50% 50%;
}
.list-on-tablets .imagewrap  {
  border: 1px solid white;
}
.list-on-tablets .prd_lst_boxouter:hover  .imagewrap {
    border: 1px solid var(--secondary-color);
}
.list-on-tablets .prd_lst_boxouter:hover .prd_amnt {
    background-color: var(--secondary-color) !important;
}
.list-on-tablets .badge {
    z-index: 1;
}

